🔪 Murder the Viewer and JLab extension
I think these had promise, but I don't have the bandwidth to maintain three different platforms (especially given how onerous the JupyterLab toolchain is, and the overall poor state of the Viewer). I'll focus on the Standalone app.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "clean": "yarn workspaces run clean",
     "build": "yarn workspace @mavenomics/metapackage run build && yarn workspaces run build:ci",
-    "bundle": "yarn workspace @mavenomics/mql-worker run bundle:ci && yarn workspace @mavenomics/standalone run bundle:ci && yarn workspace @mavenomics/viewer run bundle:ci",
+    "bundle": "yarn workspace @mavenomics/mql-worker run bundle:ci && yarn workspace @mavenomics/standalone run bundle:ci",
     "serve": "yarn workspace @mavenomics/standalone run serve",
     "registry": "yarn verdaccio --config ./bin/verdaccio-conf.yml",
     "test": "jest",
