--- a/packages/app-standalone/package.json
+++ b/packages/app-standalone/package.json
@@ -42,9 +42,23 @@
     "@phosphor/widgets": "^1.6.0",
     "font-awesome": "^4.7.0",
     "jupyterlab-mavenworks": "^0.1.0",
-    "react": "^16.8.3"
+    "c3": "^0.6.5",
+    "color-string": "^1.5.2",
+    "lodash": "^4.17.10",
+    "react": "~16.8.3",
+    "react-dom": "~16.8.3",
+    "rxjs": "^6.2.0",
+    "worker-loader": "^2.0.0" 
   },
   "devDependencies": {
+    "@types/c3": "^0.6.0",
+    "@types/color-string": "^1.5.0",
+    "@types/lodash": "^4.14.109",
+    "@types/moment": "^2.13.0",
+    "@types/rc-select": "^5.9.34",
+    "@types/rc-slider": "^8.6.2",
+    "@types/rc-tooltip": "^3.7.1",
+    "@types/react-dom": "^16.0.11",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
