Clean up dev-deps, remove Verdaccio

--- a/packages/app-cli/package.json
+++ b/packages/app-cli/package.json
@@ -22,9 +22,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/open": "^6.2.1",
     "@types/read": "^0.0.28",
-    "@types/yargs": "^13.0.3",
-    "rimraf": "^2.6.3",
-    "typescript": "*"
+    "@types/yargs": "^13.0.3"
   },
   "dependencies": {
     "@jupyterlab/coreutils": "~1.1.3",
