--- a/packages/app-standalone/package.json
+++ b/packages/app-standalone/package.json
@@ -64,10 +64,8 @@
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "less-loader": "^4.1.0",
-    "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.29.0"
+    "url-loader": "^1.1.2"
   },
   "resolutions": {
     "react": "^16.8.3",
