--- a/packages/apputils/package.json
+++ b/packages/apputils/package.json
@@ -27,7 +27,6 @@
   },
   "devDependencies": {
     "@types/fetch-mock": "^7.3.1",
-    "fetch-mock": "^7.3.9",
-    "rimraf": "^2.6.3"
+    "fetch-mock": "^7.3.9"
   }
 }
