--- a/packages/chart-parts/package.json
+++ b/packages/chart-parts/package.json
@@ -28,10 +28,7 @@
     "@types/d3": "^3.5.12",
     "@types/numeral": "^0.0.25",
     "@types/slickgrid": "^2.1.27",
-    "raw-loader": "^2.0.0",
-    "rimraf": "^2.6.3",
-    "typescript": "*",
-    "webpack": "*"
+    "raw-loader": "^2.0.0"
   },
   "dependencies": {
     "@finos/perspective": "0.3.6",
