--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -25,7 +25,6 @@
     "rxjs": "^6.4.0"
   },
   "devDependencies": {
-    "@types/color-string": "^1.5.0",
-    "rimraf": "^2.6.3"
+    "@types/color-string": "^1.5.0"
   }
 }
