--- a/packages/mql/package.json
+++ b/packages/mql/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@mavenomics/coreutils": "^0.1.0",
     "@mavenomics/table": "^0.1.0",
-    "antlr4": "^4.7.2",
+    "antlr4": "~4.7.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "papaparse": "^4.6.3"
@@ -33,7 +33,6 @@
   "devDependencies": {
     "@types/antlr4": "^4.7.0",
     "@types/node-fetch": "^2.5.1",
-    "node-fetch": "^2.6.0",
-    "rimraf": "^2.6.3"
+    "node-fetch": "^2.6.0"
   }
 }
