--- a/packages/parts/package.json
+++ b/packages/parts/package.json
@@ -35,7 +35,6 @@
   },
   "devDependencies": {
     "@jupyterlab/apputils": "~1.1.3",
-    "@jupyterlab/rendermime": "~1.1.3",
-    "rimraf": "^2.6.3"
+    "@jupyterlab/rendermime": "~1.1.3"
   }
 }
