--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,10 +21,7 @@
   },
   "devDependencies": {
     "@types/color-string": "^1.5.0",
-    "@types/react-widgets": "^4.3.3",
-    "less": "*",
-    "rimraf": "^2.6.3",
-    "typescript": "*"
+    "@types/react-widgets": "^4.3.3"
   },
   "dependencies": {
     "@mavenomics/coreutils": "^0.1.0",
