--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "lint": "tslint --project ./base.tslint.json"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.8",
+    "@types/jest": "~26.0.19",
     "@types/papaparse": "^4.5.9",
-    "jest": "^23.6.0",
-    "less": "^3.8.1",
+    "jest": "~26.6.3",
+    "less": "~4.0.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "23.10.4",
+    "ts-jest": "~26.4.4",
     "tslint": "^5.14.0",
     "typedoc": "^0.15.0",
-    "typescript": "~3.5.0",
+    "typescript": "~4.1.3",
     "webpack": "^4.29.0",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.2.1"
