--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -7,6 +7,7 @@
   "files": ["./src/index.ts"],
   "references": [
     { "path": "../apputils" },
+    { "path": "../apheleia" },
     { "path": "../bindings" },
     { "path": "../coreutils" },
     { "path": "../dashboard" },
